fix navigation drawer item not centered

--- a/src/components/dls/IconContainer/IconContainer.module.scss
+++ b/src/components/dls/IconContainer/IconContainer.module.scss
@@ -1,3 +1,6 @@
+.container {
+  display: inline-flex;
+}
 .container[dir="rtl"][data-auto-flip-icon="true"] {
   > svg {
     transform: scaleX(-1);
